--- a/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
@@ -12,16 +12,18 @@
 <body>
     <nav>
         <div class="container-fluid bg-primary d-flex justify-content-between align-items-center py-2">
-            <a class="navbar-brand fs-4 text-light">USER MANAGEMENT</a>
-            <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
+            <a class="navbar-brand fs-4 text-light me-3">USER MANAGEMENT</a>
+            <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">ADD USER+</button>
+                <button type="button" class="btn btn-dark" onclick="logout()">Logout</button>
+            </div>
         </div>
     </nav>
     <main ng-app="app">
         <section class="container-fluid mt-2 d-flex justify-content-end">
-            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">ADD USER+</button>
               
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-body">
                         <div class="d-flex justify-content-center">
