--- a/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="container-fluid bg-primary d-flex justify-content-between align-items-center py-2">
-            <a class="navbar-brand fs-4 text-light me-3">USER MANAGEMENT</a>
+            <a class="navbar-brand fs-4 text-light me-3 fw-bold">USER MANAGEMENT</a>
             <div class="d-flex justify-content-end">
                 <button type="button" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">ADD USER+</button>
                 <button type="button" class="btn btn-dark" onclick="logout()">Logout</button>
