--- a/UC-MAIN/IT-SYSARCH32/Login System/public/login.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/login.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>User Management | Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.8.3/angular-route.min.js" integrity="sha512-y1qD3hz/IAf8W4+/UMLZ+CN6LIoUGi7srWJ3r1R17Hid8x0yXe+1B5ZelkaL1Mjzedzu0Cg3HBvDG02SAgSzBw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<body>
-    <nav>
-        <div class="container-fluid bg-primary d-flex justify-content-between align-items-center py-2">
-            <a class="navbar-brand fs-4 text-light fw-bold">USER MANAGEMENT</a>
-            <div class="d-flex justify-content-end">
-                <input name="username" type="text" class="username form-control" placeholder="Username" required>
-                <input name="password" type="password" class="password form-control mx-2" placeholder="Password" required>
-                <button type="submit" class="btn btn-dark" onclick="login.compare()">Login</button>
-            </div>
+<body ng-app="app">
+    <div class="container mt-5 w-25 shadow rounded p-5" ng-controller="loginLogoutController">
+        <div class="d-flex justify-content-end">
+            <input name="username" type="text" class="username form-control" ng-model="username" placeholder="Username">
         </div>
-    </nav>
+        <div class="d-flex justify-content-end mt-3">
+            <input name="password" type="password" class="password form-control" ng-model="password" placeholder="Password">
+        </div>
+        <div class="d-flex justify-content-end mt-5">
+            <button type="button" class="bg-primary text-light form-control" ng-click="login()">SIGN IN</button>
+        </div>
+    </div>
 </body>
 <script src="./assets/js/index.js"></script>
 </html>
