--- a/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
@@ -9,14 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.8.3/angular-route.min.js" integrity="sha512-y1qD3hz/IAf8W4+/UMLZ+CN6LIoUGi7srWJ3r1R17Hid8x0yXe+1B5ZelkaL1Mjzedzu0Cg3HBvDG02SAgSzBw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body ng-app="app">
     <nav>
-        <div class="container-fluid bg-primary d-flex justify-content-between align-items-center py-2">
+        <div class="container-fluid bg-primary d-flex justify-content-between align-items-center py-2 fixed-top">
             <a class="navbar-brand fs-4 text-light me-3 fw-bold">USER MANAGEMENT</a>
             <div class="d-flex justify-content-end" ng-controller="loginLogoutController">
-                <button type="button" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target=".studentModal">ADD STUDENT+</button>
-                <button type="button" class="btn btn-warning me-2" data-bs-toggle="modal" data-bs-target=".userModal">ADD USER+</button>
+                <button type="button" class="btn bg-white me-2" data-bs-toggle="modal" data-bs-target=".studentModal">ADD STUDENT</button>
+                <button type="button" class="btn bg-white me-2" data-bs-toggle="modal" data-bs-target=".userModal">ADD USER</button>
                 <button type="button" class="btn btn-dark" ng-click="logout()">Logout</button>
             </div>
         </div>
@@ -28,9 +29,9 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content" ng-controller="registerUser">
                         <div class="modal-header justify-content-center">
-                            <span>Add A New User</span>
+                            <span class="fw-bold fs-3">New User</span>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body m-3">
                             <div class="d-flex justify-content-center">
                                 <input class="form-control" type="text" name="username" ng-model="username" value="hello" placeholder="Username">
                                 <input class="form-control mx-2" type="text" name="password" ng-model="password" placeholder="Password">
@@ -52,10 +53,10 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content" ng-controller="registerStudent">
                         <div class="modal-header justify-content-center">
-                            <span>Add A New Student</span>
+                            <span class="fw-bold fs-3">New Student</span>
                         </div>
-                        <div class="modal-body">
-                            <div class="d-flex justify-content-center my-3">
+                        <div class="modal-body m-5">
+                            <div class="d-flex justify-content-center mb-3">
                                 <input class="form-control" type="text" name="lastname" ng-model="lastname" placeholder="Lastname">
                             </div>
                             <div class="d-flex justify-content-center">
@@ -84,9 +85,9 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content" ng-controller="updateUser">
                         <div class="modal-header justify-content-center">
-                            <span>Update User</span>
+                            <span class="fw-bold fs-3">Edit User</span>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body m-5">
                             <div class="d-flex justify-content-center">
                                 <input class="form-control" type="text" name="id" ng-model="id" placeholder="ID">
                             </div>
@@ -111,9 +112,9 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content" ng-controller="updateStudent">
                         <div class="modal-header justify-content-center">
-                            <span>Update Student</span>
+                            <span class="fw-bold fs-3">Edit Student</span>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body m-5">
                             <div class="d-flex justify-content-center">
                                 <input class="form-control" type="text" name="idno" ng-model="idno" placeholder="IDNO">
                             </div>
@@ -143,7 +144,7 @@
         <!-- This section displays the list of students -->
         <section class="mt-5" ng-controller="studentList">
             <div ng-style="setDisplay">
-                <table class="table table-striped text-center">
+                <table class="table table-striped text-center shadow">
                     <caption>STUDENTS TABLE</caption>
                     <thead>
                         <tr class="table-dark">
@@ -171,7 +172,7 @@
         <!-- This section displays the list of users -->
         <section class="mt-5" ng-controller="userList">
             <div ng-style="setDisplay">
-                <table class="table table-striped text-center">
+                <table class="table table-striped text-center shadow">
                     <caption>USERS TABLE</caption>
                     <thead>
                         <tr class="table-dark">
