--- a/UC-MAIN/IT-SYSARCH32/Login System/public/login.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/login.html
@@ -9,17 +9,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.8.3/angular-route.min.js" integrity="sha512-y1qD3hz/IAf8W4+/UMLZ+CN6LIoUGi7srWJ3r1R17Hid8x0yXe+1B5ZelkaL1Mjzedzu0Cg3HBvDG02SAgSzBw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body ng-app="app">
-    <div class="container mt-5 w-25 shadow rounded p-5" ng-controller="loginLogoutController">
-        <div class="d-flex justify-content-end">
-            <input name="username" type="text" class="username form-control" ng-model="username" placeholder="Username">
-        </div>
-        <div class="d-flex justify-content-end mt-3">
-            <input name="password" type="password" class="password form-control" ng-model="password" placeholder="Password">
-        </div>
-        <div class="d-flex justify-content-end mt-5">
-            <button type="button" class="bg-primary text-light form-control" ng-click="login()">SIGN IN</button>
+    <div class="container mt-5 shadow rounded w-20" ng-controller="loginLogoutController">
+        <div class="mx-5-rem py-5-rem">
+            <div class="d-flex justify-content-end">
+                <input name="username" type="text" class="username form-control" ng-model="username" placeholder="Username">
+            </div>
+            <div class="d-flex justify-content-end mt-3">
+                <input name="password" type="password" class="password form-control" ng-model="password" placeholder="Password">
+            </div>
+            <div class="d-flex justify-content-end mt-5">
+                <button type="button" class="bg-primary text-light form-control" ng-click="login()">SIGN IN</button>
+            </div>
         </div>
     </div>
 </body>
