School Work: IT-SYSARCH32 | Login System CRUD Bug fixes

--- a/UC-MAIN/IT-SYSARCH32/Login System/public/login.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/login.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body ng-app="app">
-    <div class="container mt-5 shadow rounded w-20" ng-controller="loginLogoutController">
-        <div class="mx-5-rem py-5-rem">
+    <div class="container mt-5 shadow rounded w-25 p-3" ng-controller="loginLogoutController">
+        <div class="p-5">
             <div class="d-flex justify-content-end">
                 <input name="username" type="text" class="username form-control" ng-model="username" placeholder="Username">
             </div>
