--- a/UC-MAIN/IT-SYSARCH32/Login System/public/main.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/main.html
@@ -115,7 +115,7 @@
                         <div class="d-flex justify-content-center">
                             <button class="btnSnapshot btn btn-secondary" type="button"><i class="bi bi-camera-fill"></i></button>
                             <button class="btnToggleVideo btn btn-warning mx-3" type="button"><i class="bi bi-camera-video-off-fill"></i></button>
-                            <button class="btn btn-danger" type="button" data-bs-dismiss="modal">Close</button>
+                            <button class="btnClose btn btn-danger" type="button" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
                 </div>
