--- a/UC-MAIN/IT-SYSARCH32/Login System/public/main.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/main.html
@@ -101,7 +101,7 @@
 
         <!-- This section is for the camera modal -->
         <section>
-            <div class="cameraModal modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+            <div class="cameraModal modal modal-lg fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content py-3">
                         <div class="d-flex justify-content-center">
