School Work: IT-SYSARCH32 | Login System CRUD - updated, IT-INFOSEC32 | SemiFinals

--- a/UC-MAIN/IT-SYSARCH32/Login System/public/main.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/main.html
@@ -68,7 +68,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <input class="lastname form-control my-3" type="text" name="lastname" placeholder="Lastname" required>
+                                    <input class="lastname form-control mb-3" type="text" name="lastname" placeholder="Lastname" required>
                                     <input class="firstname form-control" type="text" name="firstname" placeholder="Firstname" required>
                                     <div class="d-flex justify-content-center my-3">
                                         <label for="course">Course</label>
