--- a/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
+++ b/UC-MAIN/IT-SYSARCH32/Login System/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Management | Login</title>
+    <title>Login | Student Management</title>
     <script src="./assets/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./assets/angular/angular.min.js"></script>
     <link rel="stylesheet" href="./assets/bootstrap/dist/css/bootstrap.min.css">
